refatorando_botoes_slides_comentarios

--- a/index.html
+++ b/index.html
@@ -130,8 +130,10 @@
                         </div><!--Fim item-->
 
                     </div><!--Fim inner-->
-                    <a class="carousel-control-prev" href="#carousel-depoimentos" role="button" data-slide="prev">&#8678;</a>
-                    <a class="carousel-control-next" href="#carousel-depoimentos" role="button" data-slide="next">&#8680;</a>
+                    <div class="container-btn-controles">
+                        <a class="btn-controles" href="#carousel-depoimentos" role="button" data-slide="prev">&#8678;</a>
+                        <a class="btn-controles" href="#carousel-depoimentos" role="button" data-slide="next">&#8680;</a>
+                    </div>
                 </div><!--Fim carrousel-->
            </div><!--Fim container-->
             
